Add ML tag for F#

--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -2,7 +2,7 @@ programming:
   - name: F#
     source: fsharp.md
     collapsed: false
-    tags: []
+    tags: [ML]
 
   - name: C#
     source: csharp.md
