--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "gulp-watch": "gulp watch",
     "gulp-build": "gulp build",
     "jekyll-watch": "jekyll build --watch",
-    "jekyll-serve": "jekyll serve --livereload",
+    "jekyll-serve": "bundle exec jekyll serve --livereload",
     "gh-pages": "./gh-pages.sh",
     "dist": "gulp build && JEKYLL_ENV=production jekyll build --destination dist",
     "publish-dist": "./gh-pages.sh",
