Rename COM app to Bafgh

--- a/_data/work-xp.yml
+++ b/_data/work-xp.yml
@@ -3,5 +3,5 @@
   image-url: assets/images/resume/freelancer.jpg
 
 - title: Desktop Developer
-  body:   I develop WPF Desktop Industrial applications for HOMATEC company, such as CityCloud cloud file storage app, COM Port Weight Reader app, etc. 
+  body:   I develop WPF Desktop Industrial applications for HOMATEC company, such as CityCloud cloud file storage app, Bafgh Automation app, etc. 
   image-url: assets/images/resume/desktop-app.jpg
