--- a/_data/education.yml
+++ b/_data/education.yml
@@ -3,7 +3,7 @@
   location: University of Guilan
   years: 2015 - 2019
   body:
-     At University of Guilan, I began to show other students my knowledge about programming and web design.
+     At University of Guilan, I began to share my knowledge about programming and web design with other students.
      After that, I became a member of the academic forum and participated in an ACM programming contest with the result of
      honorable mention. I had in-class [presentations](https://github.com/0xaryan/Presentation) about Agile software methodologies,
      DevOps, Refactoring and Bad smells in code,
