--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,7 +1,7 @@
 - title: Master of Computer Engineering
   subtitle: Master's Degree
   location: Iran University of Science & Technology
-  link: http://www.iust.ac.ir/en
+  link: http://www.iust.ac.ir
   years: 2019 - 2021
   body:
      I've been accepted into Iran University of Science & Technology with Exceptional Talents Program and I will start my Master's
