--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: 0xaryan
-description: 0xaryan's Personal Website
+title: Aryan Ebrahimpour
+description: Aryan Ebrahimpour
 
 host: 0.0.0.0
 
