--- a/_data/users.yml
+++ b/_data/users.yml
@@ -10,7 +10,7 @@
     dmy: 22/12/1997
     mdy: 12/22/1997
     raw: 469330121
-  email: aryanebrahimpour@gmail.com
+  email: Oxaryan@outlook.com
   username: victoria_84
   password: King84${
   credit_card:
