Modular "other" projects view

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,5 +1,78 @@
+# More detailed project that has their own pages in /projects folder
 menu:
   - title: My Projects Page
     pages: [index]
   - title: Projects
-    pages: [bafgh, hasti-studio, hasti-lang, fsharp-pad, eyes-guard, vhdl-pingpong, ocisp, network-lab, saman-log, excel-moodle, event-template, other]
+    pages: [bafgh,
+            hasti-studio,
+            hasti-lang,
+            fsharp-pad, 
+            eyes-guard, 
+            vhdl-pingpong, 
+            ocisp,
+            network-lab, 
+            saman-log, 
+            excel-moodle, 
+            event-template,
+            other]
+
+# Minimal projects with link to outside of the site
+others:
+  - href: "https://aryan.software/FuzzyOperators"
+    icon: "fe fe-briefcase"
+    description: "Fuzzy Plot"
+    subtitle: "Fuzzy T-Norm and S-Norm plotter."
+    color: "blue"
+
+  - icon: "fe fe-briefcase"
+    description: "City Cloud"
+    subtitle: "Cloud Storage Manager"
+    color: "blue"
+
+  - icon: "fe fe-briefcase"
+    description: "Aryogram"
+    subtitle: "A simple C# winsock messaging app." 
+    color: "blue"
+
+  - href: "https://github.com/0xaryan/GuilanDataStructures" 
+    icon: "fe fe-briefcase" 
+    description: "Guilan Data Structures" 
+    subtitle: "Projects of Data Structure course" 
+    color: "blue"
+
+  - href: "https://github.com/0xaryan/doozGame" 
+    icon: "fe fe-briefcase" 
+    description: "doozGame" 
+    subtitle: "Gui Tic-Tac-Too in C++" 
+    color: "blue"
+
+  - href: "https://github.com/0xaryan/Khorshid" 
+    icon: "fe fe-briefcase" 
+    description: "Khorshid" 
+    subtitle: "🚕 Simple telephone taxi management" 
+    color: "blue"
+
+  - href: "https://github.com/0xaryan/Minesweeper-Persian"
+    icon: "fe fe-briefcase" 
+    description: "Persian Minesweeper" 
+    subtitle: "💣 GUI Minesweeper in java" 
+    color: "blue"
+
+  - href: "https://github.com/0xaryan/PhotoFiremark" 
+    icon: "fe fe-briefcase" 
+    description: "Photo Firemark" 
+    subtitle: "Hide a photo in another photo" 
+    color: "blue"
+
+  - href: "https://github.com/0xaryan/DCMotor"
+    icon: "fe fe-briefcase" 
+    description: "DC Motor" 
+    subtitle: "⚡ DCMotor speed control" 
+    color: "blue"
+
+  - href: "https://github.com/0xaryan/MicrocontrollerCalculator"
+    icon: "fe fe-briefcase" 
+    description: "Microcontroller Calculator" 
+    subtitle: "A calculator written in Assembly" 
+    color: "blue"
+
