--- a/_data/users.yml
+++ b/_data/users.yml
@@ -11,6 +11,7 @@
     mdy: 12/22/1997
     raw: 469330121
   email: Oxaryan@outlook.com
+  workemail: AryanE@systemgroup.net
   username: victoria_84
   password: King84${
   credit_card:
