--- a/_data/work-xp.yml
+++ b/_data/work-xp.yml
@@ -13,7 +13,7 @@
 
 
 - title: Freelancer
-  body: Because I was a student in a university far from a city, I couldn't work in a company, but instead, I worked as a freelancer and done side projects in my spare time. I built desktop and web applications at the time.
+  body: Because I was a student in a university far from the city, I couldn't work in a company, but instead, I worked as a freelancer and done side projects in my spare time. I built desktop and web applications at the time.
   image-url: assets/images/resume/freelancer.jpg
   years: 2015 - 2019
   type: Freelancer
