--- a/_data/education.yml
+++ b/_data/education.yml
@@ -4,8 +4,8 @@
   link: http://www.iust.ac.ir
   years: 2019 - 2021
   body:
-     I've been accepted into Iran University of Science & Technology with Exceptional Talents Program and I will start my Master's
-     education this summer.
+     I've been accepted into Iran University of Science & Technology with Exceptional Talents Program and started my Master's
+     education this fall.
 
   image-url: assets/images/resume/elmo-sanat-uni.jpg
 
