--- a/_data/work-xp.yml
+++ b/_data/work-xp.yml
@@ -28,7 +28,7 @@
 
 
 - title: Desktop Developer
-  body:   I developed WPF Desktop Industrial applications for [HOMATEC](http://homatec.ir) company, such as CityCloud cloud file storage app, Bafgh Automation app, etc.
+  body:   I developed Industrial applications for [HOMATEC](http://homatec.ir) company, such as CityCloud cloud file storage app, Bafgh Automation app, etc.
   image-url: assets/images/resume/desktop-app.jpg
   years: 2016 - 2018
   type: Full-Time and Remote
