--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -2,10 +2,10 @@ items:
     - q: What does '0xaryan' means?
       a: "*0xaryan*, *Oxaryan*, *0xAryan*, etc are my codename! It consists of *0x* which is the symbol of hexadecimal numbers and *Aryan*, my name."
 
-    - q: .NET, Azure, Windows. Are you vendor lock-ined by Microsoft?
+    - q: .NET, Azure, Windows. Are you vendor locked-in by Microsoft?
       a: Even tho I am skilled in Microsoft Technologies, I am comfortable and open to use and learn other techs,
          solutions and approaches. I do like Microsoft a lot, but also a criticizer to its solutions and policies. In summary,
-         *I don't belive that I'm vendor lock-ined by MS as I embrace and use every tech that looks cool to me.*
+         *I don't belive that I'm vendor locked-in by MS as I embrace and use every tech that looks cool to me.*
 
     - q: Which one do you prefer? Object-oriented or Functional Programming?
       a: Obviously Functional Programming. I find Functional Programming easier to reason about the code, and it helps you to do much
