--- a/_data/work-xp.yml
+++ b/_data/work-xp.yml
@@ -1,5 +1,5 @@
 - title: System Group
-  body: I work in the DevOps team of the [SystemGroup](https://systemgroup.net/en), a large compnay in Tehran-Iran which provides
+  body: I work in the DevOps team of the [SystemGroup](https://systemgroup.net/en), a large company in Tehran, Iran which provides
         enterprise-scale ERP systems, cloud solutions, automation and accounting services
         and software.
 
