--- a/_data/errors.yml
+++ b/_data/errors.yml
@@ -1,23 +1,23 @@
 error-400:
   name: 400
-  description: We are sorry but your request contains bad syntax and cannot be fulfilled
+  description: your request contains bad syntax and cannot be fulfilled
 
 error-401:
   name: 401
-  description: We are sorry but you are not authorized to access this page
+  description: you are not authorized to access this page
 
 error-403:
   name: 403
-  description: We are sorry but you do not have permission to access this page
+  description: you do not have permission to access this page
 
 error-404:
   name: 404
-  description: I am sorry, but you shouldn't be here
+  description: this page doesn't exist.
 
 error-500:
   name: 500
-  description: We are sorry but your request contains bad syntax and cannot be fulfilled
+  description: your request contains bad syntax and cannot be fulfilled
 
 error-503:
   name: 503
-  description: We are sorry but our service is currently not available
+  description: our service is currently not available
