--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -34,43 +34,43 @@ others:
     subtitle: "A simple C# winsock messaging app."
     color: "blue"
 
-  - href: "https://github.com/0xaryan/GuilanDataStructures"
+  - href: "https://github.com/avestura/GuilanDataStructures"
     icon: "fe fe-briefcase"
     description: "Guilan Data Structures"
     subtitle: "Projects of Data Structure course"
     color: "blue"
 
-  - href: "https://github.com/0xaryan/doozGame"
+  - href: "https://github.com/avestura/doozGame"
     icon: "fe fe-briefcase"
     description: "doozGame"
     subtitle: "Gui Tic-Tac-Too in C++"
     color: "blue"
 
-  - href: "https://github.com/0xaryan/Khorshid"
+  - href: "https://github.com/avestura/Khorshid"
     icon: "fe fe-briefcase"
     description: "Khorshid"
     subtitle: "🚕 Simple telephone taxi management"
     color: "blue"
 
-  - href: "https://github.com/0xaryan/Minesweeper-Persian"
+  - href: "https://github.com/avestura/Minesweeper-Persian"
     icon: "fe fe-briefcase"
     description: "Persian Minesweeper"
     subtitle: "💣 GUI Minesweeper in java"
     color: "blue"
 
-  - href: "https://github.com/0xaryan/PhotoFiremark"
+  - href: "https://github.com/avestura/PhotoFiremark"
     icon: "fe fe-briefcase"
     description: "Photo Firemark"
     subtitle: "Hide a photo in another photo"
     color: "blue"
 
-  - href: "https://github.com/0xaryan/DCMotor"
+  - href: "https://github.com/avestura/DCMotor"
     icon: "fe fe-briefcase"
     description: "DC Motor"
     subtitle: "⚡ DCMotor speed control"
     color: "blue"
 
-  - href: "https://github.com/0xaryan/MicrocontrollerCalculator"
+  - href: "https://github.com/avestura/MicrocontrollerCalculator"
     icon: "fe fe-briefcase"
     description: "Microcontroller Calculator"
     subtitle: "A calculator written in Assembly"
