--- a/_data/work-xp.yml
+++ b/_data/work-xp.yml
@@ -25,7 +25,7 @@
   image-url: assets/images/resume/freelancer.jpg
   years: 2015 - 2019
   type: Freelancer
-  website-url: https://aryan.software
+  website-url: https://avestura.dev
 
 
 - title: Desktop Developer
