--- a/_data/users.yml
+++ b/_data/users.yml
@@ -10,7 +10,7 @@
     dmy: 22/12/1997
     mdy: 12/22/1997
     raw: 469330121
-  email: Oxaryan@outlook.com
+  email: me@avestura.dev
   uniemail: ebrahimpour_h@comp.iust.ac.ir
   workemail: AryanE@systemgroup.net
   username: avestura
