More explendid and less emotional

--- a/_data/faq.yml
+++ b/_data/faq.yml
@@ -1,12 +1,12 @@
 items:
     - q: .NET, Azure, Windows. Are you vendor locked-in by Microsoft?
       a: Even tho I am skilled in Microsoft Technologies, I am comfortable and open to use and learn other techs,
-         solutions and approaches. I do like Microsoft a lot, but also a criticizer to its solutions and policies. In summary,
+         solutions and approaches. In summary,
          *I don't belive that I'm vendor locked-in by MS as I embrace and use every tech that looks cool to me.*
 
     - q: Which one do you prefer? Object-oriented or Functional Programming?
-      a: Obviously Functional Programming. I find Functional Programming easier to reason about the code, and it helps you to do much
-         more with less code. It's safer, and fits my soul. There are already sources in this website that proves this claim.
+      a: I find Functional Programming easier to reason about the code, and it helps you to do much
+         more with less code. It's safer, and fits my soul.
 
     - q: Are you willing to work with us?
       a: I'm always open to hear about new opportunities.
