--- a/_data/personal.yml
+++ b/_data/personal.yml
@@ -36,4 +36,4 @@
 - title: Favorite Youtubers
   icon: fa fa-youtube-play
   color: red
-  tags: [PewDiePie, Dream, Jacksepticeye, Disguised Toast, LilyPichu, Technoblade, Wilbur Soot, Mr Beast, LazarBeam]
+  tags: [PewDiePie, Dream, Jacksepticeye, Disguised Toast, Michael Reeves, LilyPichu, Technoblade, Wilbur Soot, Mr Beast, LazarBeam]
