--- a/_data/education.yml
+++ b/_data/education.yml
@@ -4,8 +4,10 @@
   link: http://www.iust.ac.ir
   years: 2019 - 2021
   body:
-     I've been accepted into Iran University of Science & Technology with Exceptional Talents Program and started my Master's
-     education this fall. My advisor professor is [Dr Mehrdad Ashtiani](http://webpages.iust.ac.ir/m_ashtiani).
+     At Iran University of Science & Technology, I’ve studied performance evaluation of computer systems,
+     distributed systems, cloud and grid computing, data mining, dynamic complex networks, and fault tolerance
+     of software and hardware systems. I'm currently working on scheduling algorithms in serverless platforms and
+     function-as-a-service. My advisor professor is [Dr Mehrdad Ashtiani](http://webpages.iust.ac.ir/m_ashtiani).
 
   image-url: assets/images/resume/elmo-sanat-uni.jpg
 
