--- a/_data/work-xp.yml
+++ b/_data/work-xp.yml
@@ -1,7 +1,7 @@
 - title: System Group
   body: I work in the DevOps team of the [SystemGroup](https://systemgroup.net/en), a large company in Tehran, Iran which provides
         enterprise-scale ERP systems, cloud solutions, automation and accounting services
-        and software.
+        and software. I work on a wide varity of DevOps related projects in the company.
 
 
         I mainly use F#, C#, PowerShell, JavaScript and TypeScript for the projects.
