change tech tags

--- a/_data/personal.yml
+++ b/_data/personal.yml
@@ -16,7 +16,7 @@
 - title: Technology
   icon: fe fe-cpu
   color: azure
-  tags: [Microsoft Research, Functional Programming]
+  tags: [Functional Programming, Category Theory, Theorem Proving, Electronics]
 
 - title: Politics
   icon: fe fe-flag
